# util

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  app.py.bak  assemble.py  login_watttime.py  new_callout.txt  new_css.txt  new_helpers.txt  new_nav.txt  register_watttime.py  render.yaml  requirements.txt  util-backend-x86_64-pc-windows-msvc.spec
.claude/: settings.local.json
docs/: deployment_checklist.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/config/: runtime.env.example
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs  main.rs.bak
notebooks/: 01_project_sandbox.ipynb  02_data_exploration.ipynb
scripts/: backend_sidecar.py  generate_zip_coords.py  render_start.py  watttime_location_access_check.py  watttime_location_access_check_v2.py
services/: __init__.py  watttime_service.py
src/: admin_dashboard.py  analytics.py  baseline.py  constants.py  data_fetcher.py  exporter.py  inputs.py  mapper.py  metrics.py  optimizer.py  pipeline.py  price_router.py  pricing.py  region_router.py  runtime_config.py  scheduler.py  scheduling_window.py  utils.py  validators.py
tests/: test_analytics.py  test_api.py  test_feasibility.py  test_optimizer.py  test_optimizer_objective.py  test_pattern_extension.py  test_pricing.py  test_s3_storage.py  (+6 more)
(+592 files in other folders)
