[package]
name = "util-desktop"
version = "0.1.0"
description = "Desktop wrapper for Util"
authors = ["Util"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
